syntax = "proto3";
package zetachain.zetacore.ibccrosschain;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/node/x/ibccrosschain/types";

// GenesisState defines the ibccrosschain module's genesis state.
message GenesisState {}
